name:                bench-exec
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/AndreasPK/bench-exec#readme
license:             BSD3
license-file:        LICENSE
author:              Andreas Klebinger
copyright:           2017 Andreas Klebinger
category:            utils
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable bench-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       
    base >= 4.7 && < 5, criterion, process, deepseq
  ghc-options:         -rtsopts -O1
                    
